jilles      2006/12/08 21:14:05 UTC	(20061208-7349)
  Log:
  Mention channel_can_change_topic hook.
  

  Changes:	Modified:
  +1 -0		trunk/doc/HOOKS (File Modified) 


jilles      2006/12/08 19:46:02 UTC	(20061208-7347)
  Log:
  Add user_info hook, allows modules to add things to /ns info.
  

  Changes:	Modified:
  +1 -0		trunk/doc/HOOKS (File Modified) 
  +6 -0		trunk/include/account.h (File Modified) 
  +7 -1		trunk/modules/nickserv/info.c (File Modified) 


jilles      2006/12/08 14:07:52 UTC	(20061208-7345)
  Log:
  Update release notes.
  

  Changes:	Modified:
  +8 -0		trunk/doc/RELEASE (File Modified) 


jilles      2006/12/08 13:58:23 UTC	(20061208-7343)
  Log:
  gen_vhostonreg: if the account name contains invalid
  characters or would cause a too long vhost, strip
  the invalid characters or truncate it, and add a
  five-digit number to make it unique. Warn the user
  about this.
  

  Changes:	Modified:
  +44 -3	trunk/contrib/gen_vhostonreg.c (File Modified) 


jilles      2006/12/08 00:01:54 UTC	(20061208-7341)
  Log:
  Update comments for channel_delete().
  

  Changes:	Modified:
  +1 -3		trunk/src/channels.c (File Modified) 


jilles      2006/12/07 20:02:49 UTC	(20061207-7339)
  Log:
  myuser_delete(): also log out users from the account if
  no authentication service is loaded, just don't call
  ircd_on_logout().
  

  Changes:	Modified:
  +6 -9		trunk/src/account.c (File Modified) 


jilles      2006/12/07 19:36:28 UTC	(20061207-7337)
  Log:
  Free bans and the topic when destroying a channel.
  

  Changes:	Modified:
  +6 -0		trunk/src/channels.c (File Modified) 


jilles      2006/12/07 00:27:57 UTC	(20061207-7335)
  Log:
  Add sourceinfo pointer to hook_channel_req_t (channel_info hook).
  

  Changes:	Modified:
  +1 -0		trunk/include/account.h (File Modified) 
  +1 -0		trunk/modules/chanserv/info.c (File Modified) 


jilles      2006/12/06 22:43:21 UTC	(20061206-7333)
  Log:
  anope->atheme conversion tool: