@@ -1,3 +1,13 @@
+jilles      2006/12/09 20:54:13 UTC	(20061209-7351)
+  Log:
+  Show an extra line in /ns info (to all users)
+  if ENFORCE is enabled for the account.
+  
+
+  Changes:	Modified:
+  +12 -0	trunk/modules/nickserv/enforce.c (File Modified) 
+
+
 jilles      2006/12/08 21:14:05 UTC	(20061208-7349)
   Log:
   Mention channel_can_change_topic hook.
